--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -86,3 +86,8 @@ code {
 .footer-copyright {
     margin-bottom: 20px;
 }
+
+.list-group-item.active {
+    background-color:  #333;
+    border-color: #333;
+}
